// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render popup 1`] = `
<div
  className="ReportCommentForm-root coral coral-reportPopover"
  data-testid="report-comment-form"
  role="none"
>
  <form
    autoComplete="off"
    className="ReportCommentForm-root"
    id="report-comments-form"
    onSubmit={[Function]}
  >
    <div>
      <div
        className="ReportCommentForm-title"
      >
        Report This Comment
      </div>
      <div
        className="ReportCommentForm-heading"
      >
        Why are you reporting this comment?
      </div>
      <ul
        className="ReportCommentForm-list"
      >
        <li>
          <div
            className="Box-root Flex-root RadioButton-root Flex-flex Flex-alignCenter"
          >
            <input
              checked={false}
              className="RadioButton-input"
              disabled={false}
              id="reportComment-popover--reason-COMMENT_REPORTED_OFFENSIVE"
              name="reason"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="COMMENT_REPORTED_OFFENSIVE"
            />
            <label
              className="RadioButton-label"
              htmlFor="reportComment-popover--reason-COMMENT_REPORTED_OFFENSIVE"
            >
              This comment is offensive
            </label>
          </div>
        </li>
        <li>
          <div
            className="Box-root Flex-root RadioButton-root Flex-flex Flex-alignCenter"
          >
            <input
              checked={false}
              className="RadioButton-input"
              disabled={false}
              id="reportComment-popover--reason-COMMENT_REPORTED_ABUSIVE"
              name="reason"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="COMMENT_REPORTED_ABUSIVE"
            />
            <label
              className="RadioButton-label"
              htmlFor="reportComment-popover--reason-COMMENT_REPORTED_ABUSIVE"
            >
              This commenter is being abusive
            </label>
          </div>
        </li>
        <li>
          <div
            className="Box-root Flex-root RadioButton-root Flex-flex Flex-alignCenter"
          >
            <input
              checked={false}
              className="RadioButton-input"
              disabled={false}
              id="reportComment-popover--reason-DISAGREE"
              name="reason"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="DISAGREE"
            />
            <label
              className="RadioButton-label"
              htmlFor="reportComment-popover--reason-DISAGREE"
            >
              I disagree with this comment
            </label>
          </div>
        </li>
        <li>
          <div
            className="Box-root Flex-root RadioButton-root Flex-flex Flex-alignCenter"
          >
            <input
              checked={false}
              className="RadioButton-input"
              disabled={false}
              id="reportComment-popover--reason-COMMENT_REPORTED_SPAM"
              name="reason"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="COMMENT_REPORTED_SPAM"
            />
            <label
              className="RadioButton-label"
              htmlFor="reportComment-popover--reason-COMMENT_REPORTED_SPAM"
            >
              This looks like an ad or marketing
            </label>
          </div>
        </li>
        <li>
          <div
            className="Box-root Flex-root RadioButton-root Flex-flex Flex-alignCenter"
          >
            <input
              checked={false}
              className="RadioButton-input"
              disabled={false}
              id="reportComment-popover--reason-COMMENT_REPORTED_OTHER"
              name="reason"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="COMMENT_REPORTED_OTHER"
            />
            <label
              className="RadioButton-label"
              htmlFor="reportComment-popover--reason-COMMENT_REPORTED_OTHER"
            >
              Other
            </label>
          </div>
        </li>
      </ul>
      <label
        className="ReportCommentForm-heading"
        htmlFor="comments-reportCommentForm-additionalDetails--comment-0"
      >
        Additional information 
        <span
          className="ReportCommentForm-detail"
        >
          Optional
        </span>
      </label>
      <div
        className="ReportCommentForm-detail"
      >
        Please leave any additional information that may be helpful to our moderators.
      </div>
      <div>
        <div
          className="ReportCommentForm-textAreaContainer"
        >
          <textarea
            className="ReportCommentForm-textarea"
            data-testid="report-comment-additional-information"
            disabled={false}
            id="comments-reportCommentForm-additionalDetails--comment-0"
            name="additionalDetails"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            value=""
          />
          <div
            className="ReportCommentForm-textareaInfo"
          >
            <div>
              Max. 500 Characters
            </div>
          </div>
        </div>
      </div>
      <div
        className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd Flex-alignCenter"
      >
        <button
          className="BaseButton-root Button-base Button-outlined Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorSecondary Button-upperCase coral coral-reportPopover-cancelButton ReportCommentForm-cancel"
          data-variant="outlined"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          Cancel
        </button>
        <button
          className="BaseButton-root Button-base Button-filled Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorSecondary Button-disabled Button-upperCase coral coral-reportPopover-submitButton"
          data-variant="filled"
          disabled={true}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="submit"
        >
          Submit
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`render popup expanded 1`] = `
<div
  className="ReportCommentForm-root coral coral-reportPopover"
  data-testid="report-comment-form"
  role="none"
>
  <form
    autoComplete="off"
    className="ReportCommentForm-root"
    id="report-comments-form"
    onSubmit={[Function]}
  >
    <div>
      <div
        className="ReportCommentForm-title"
      >
        Report This Comment
      </div>
      <div
        className="ReportCommentForm-heading"
      >
        Why are you reporting this comment?
      </div>
      <ul
        className="ReportCommentForm-list"
      >
        <li>
          <div
            className="Box-root Flex-root RadioButton-root Flex-flex Flex-alignCenter"
          >
            <input
              checked={true}
              className="RadioButton-input"
              disabled={false}
              id="reportComment-popover--reason-COMMENT_REPORTED_OFFENSIVE"
              name="reason"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="COMMENT_REPORTED_OFFENSIVE"
            />
            <label
              className="RadioButton-label RadioButton-labelChecked"
              htmlFor="reportComment-popover--reason-COMMENT_REPORTED_OFFENSIVE"
            >
              This comment is offensive
            </label>
          </div>
        </li>
        <li>
          <div
            className="Box-root Flex-root RadioButton-root Flex-flex Flex-alignCenter"
          >
            <input
              checked={false}
              className="RadioButton-input"
              disabled={false}
              id="reportComment-popover--reason-COMMENT_REPORTED_ABUSIVE"
              name="reason"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="COMMENT_REPORTED_ABUSIVE"
            />
            <label
              className="RadioButton-label"
              htmlFor="reportComment-popover--reason-COMMENT_REPORTED_ABUSIVE"
            >
              This commenter is being abusive
            </label>
          </div>
        </li>
        <li>
          <div
            className="Box-root Flex-root RadioButton-root Flex-flex Flex-alignCenter"
          >
            <input
              checked={false}
              className="RadioButton-input"
              disabled={false}
              id="reportComment-popover--reason-DISAGREE"
              name="reason"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="DISAGREE"
            />
            <label
              className="RadioButton-label"
              htmlFor="reportComment-popover--reason-DISAGREE"
            >
              I disagree with this comment
            </label>
          </div>
        </li>
        <li>
          <div
            className="Box-root Flex-root RadioButton-root Flex-flex Flex-alignCenter"
          >
            <input
              checked={false}
              className="RadioButton-input"
              disabled={false}
              id="reportComment-popover--reason-COMMENT_REPORTED_SPAM"
              name="reason"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="COMMENT_REPORTED_SPAM"
            />
            <label
              className="RadioButton-label"
              htmlFor="reportComment-popover--reason-COMMENT_REPORTED_SPAM"
            >
              This looks like an ad or marketing
            </label>
          </div>
        </li>
        <li>
          <div
            className="Box-root Flex-root RadioButton-root Flex-flex Flex-alignCenter"
          >
            <input
              checked={false}
              className="RadioButton-input"
              disabled={false}
              id="reportComment-popover--reason-COMMENT_REPORTED_OTHER"
              name="reason"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="COMMENT_REPORTED_OTHER"
            />
            <label
              className="RadioButton-label"
              htmlFor="reportComment-popover--reason-COMMENT_REPORTED_OTHER"
            >
              Other
            </label>
          </div>
        </li>
      </ul>
      <label
        className="ReportCommentForm-heading"
        htmlFor="comments-reportCommentForm-additionalDetails--comment-0"
      >
        Additional information 
        <span
          className="ReportCommentForm-detail"
        >
          Optional
        </span>
      </label>
      <div
        className="ReportCommentForm-detail"
      >
        Please leave any additional information that may be helpful to our moderators.
      </div>
      <div>
        <div
          className="ReportCommentForm-textAreaContainer"
        >
          <textarea
            className="ReportCommentForm-textarea"
            data-testid="report-comment-additional-information"
            disabled={false}
            id="comments-reportCommentForm-additionalDetails--comment-0"
            name="additionalDetails"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            value=""
          />
          <div
            className="ReportCommentForm-textareaInfo"
          >
            <div>
              Max. 500 Characters
            </div>
          </div>
        </div>
      </div>
      <div
        className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd Flex-alignCenter"
      >
        <button
          className="BaseButton-root Button-base Button-outlined Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorSecondary Button-upperCase coral coral-reportPopover-cancelButton ReportCommentForm-cancel"
          data-variant="outlined"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          Cancel
        </button>
        <button
          className="BaseButton-root Button-base Button-filled Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorSecondary Button-upperCase coral coral-reportPopover-submitButton"
          data-variant="filled"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="submit"
        >
          Submit
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`report comment as offensive 1`] = `
<div
  aria-labelledby="comment-comment-0-label"
  className="CommentContainer-root coral coral-comment coral coral-reacted-0"
  data-key-stop={true}
  data-testid="comment-comment-0"
  id="comment-comment-0"
  onFocus={[Function]}
  role="article"
  tabIndex={-1}
>
  <div
    className="Hidden-root"
    id="comment-comment-0-label"
  >
    <span>
      Comment from Markus 
      <time
        className="RelativeTime-root"
        dateTime="2018-07-06T18:24:00.000Z"
        title="2018-07-06T18:24:00.000Z"
      >
        2018-07-06T18:24:00.000Z
      </time>
    </span>
  </div>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-full"
  >
    <div
      className="coral coral-comment-collapse-toggle-indent Indent-root"
    >
      <div
        className="CommentContainer-indentedCommentRoot coral coral-indent coral-indent-0 Indent-open"
      >
        <div
          className="Box-root Flex-root Flex-flex Flex-alignFlexStart gutter Flex-spacing-1"
        >
          <button
            aria-label="Hide comment by Markus and its replies"
            className="BaseButton-root IndentedComment-toggleButton coral coral-comment-collapse-toggle"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm coral coral-icon ButtonIcon-root IndentedComment-icon coral coral-comment-collapse-toggle-icon"
            >
              remove
            </i>
          </button>
          <div
            className="Box-root HorizontalGutter-root Comment-root HorizontalGutter-half"
          >
            <div
              className="Box-root Flex-root coral coral-comment-topBar Flex-flex Flex-justifySpaceBetween Flex-alignFlexStart Flex-directionRow"
            >
              <div
                className="Box-root Flex-root Flex-flex Flex-wrap Flex-alignCenter"
              >
                <div
                  className="Comment-username"
                >
                  <div
                    className="Popover-root"
                  >
                    <button
                      aria-controls="username-popover-comment-0"
                      aria-label="User Markus"
                      className="BaseButton-root CommentContainer-usernameButton coral coral-username coral-comment-username"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Username-root"
                      >
                        Markus
                      </span>
                    </button>
                    <div
                      aria-hidden={true}
                      aria-label="A popover with more user information"
                      id="username-popover-comment-0"
                      role="dialog"
                    />
                  </div>
                </div>
                <div
                  className="Box-root Flex-root Flex-flex Flex-wrap Flex-alignCenter Flex-directionRow"
                >
                  <button
                    className="BaseButton-root Timestamp-root"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <time
                      className="RelativeTime-root Timestamp-text Comment-timestamp coral coral-timestamp coral-comment-timestamp"
                      dateTime="2018-07-06T18:24:00.000Z"
                      title="2018-07-06T18:24:00.000Z"
                    >
                      2018-07-06T18:24:00.000Z
                    </time>
                  </button>
                </div>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-wrap Flex-justifyFlexEnd"
              >
                <div
                  className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter gutter"
                />
              </div>
            </div>
            <div
              className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
            >
              <div
                className="HTMLContent-root coral coral-content coral-comment-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Joining Too",
                  }
                }
              />
              <div
                className="Box-root Flex-root coral coral-comment-actionBar Flex-flex Flex-justifySpaceBetween"
              >
                <div
                  className="Box-root Flex-root CommentContainer-actionBar Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
                >
                  <button
                    aria-label="Respect comment by Markus"
                    aria-pressed={false}
                    className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary CommentContainer-actionButton coral coral-reactButton coral-comment-reactButton ReactionButton-button"
                    data-testid="comment-reaction-button"
                    data-variant="flat"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Box-root Flex-root Flex-flex Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon ReactionButton-icon coral coral-reactButton coral-comment-reactButton"
                      >
                        thumb_up
                      </i>
                    </span>
                  </button>
                  <button
                    aria-label="Reply to comment by Markus"
                    aria-pressed={false}
                    className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary CommentContainer-actionButton coral coral-comment-replyButton"
                    data-testid="comment-reply-button"
                    data-variant="flat"
                    disabled={false}
                    id="comments-commentContainer-replyButton-comment-0"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Box-root Flex-root Flex-flex Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon ReplyButton-icon"
                      >
                        reply
                      </i>
                    </span>
                  </button>
                  <div
                    className="Popover-root"
                  >
                    <button
                      aria-controls="permalink-popover-comment-0"
                      aria-label="Share comment by Markus"
                      aria-pressed={false}
                      className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary coral coral-comment-shareButton"
                      data-variant="flat"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Box-root Flex-root Flex-flex Flex-alignCenter"
                      >
                        <i
                          aria-hidden="true"
                          className="Icon-root Icon-sm coral coral-icon PermalinkButton-icon"
                        >
                          share
                        </i>
                      </span>
                    </button>
                    <div
                      aria-hidden={true}
                      aria-label="A dialog showing a permalink to the comment"
                      id="permalink-popover-comment-0"
                      role="dialog"
                    />
                  </div>
                </div>
                <div
                  className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
                >
                  <div
                    aria-label="Reported"
                    className="coral-reportedButton coral-comment-reportedButton ReportButton-reported"
                    data-testid="comment-reported-button"
                  >
                    <div
                      className="Box-root Flex-root Flex-flex Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon ReportButton-icon"
                      >
                        flag
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="CallOut-root CallOut-success CallOut-leftBorder"
    >
      <div
        className="CallOut-container"
      >
        <div
          className="CallOut-icon CallOut-success CallOut-leftIcon"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm coral coral-icon"
          >
            check_circle
          </i>
        </div>
        <div
          aria-live="polite"
          className="CallOut-content"
        >
          <div
            className="CallOut-title CallOut-titleMargin CallOut-titleBold"
          >
            Thank you!
          </div>
          <div
            className="CallOut-body"
          >
            We’ve received your message. Reports from members like you keep the community safe.
          </div>
        </div>
        <div
          className="CallOut-actions"
        >
          <button
            aria-label="Close"
            className="BaseButton-root"
            data-testid="callout-close-button"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm coral coral-icon"
            >
              close
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
